QA:11 - Fixed validation messages not showing in the correct place.

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ input{
 	flex-direction: column;
 	border: 2px solid #A55;
 	background-color: #A99;
+	margin-top: 10px;
 	padding: 5px 15px;
 }
 
